// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool-usage component rendering > renders empty tool usage when no tools 1`] = `
"[38;2;250;208;0m[1mTool Usage[22m[39m
Sessions: -  |  Tool Calls: -

[38;2;250;208;0m[Current Session][39m  [38;2;76;62;118m All Sessions [39m

[38;2;76;62;118m  No session data[39m

[38;2;76;62;118m[Tab/←→] switch tab  [↑↓] cycle sessions  [q] close[39m"
`;

exports[`tool-usage component rendering > renders session tab with per-session breakdown 1`] = `
"[38;2;250;208;0m[1mTool Usage[22m[39m
Sessions: 3  |  Tool Calls: 42

[38;2;250;208;0m[Current Session][39m  [38;2;76;62;118m All Sessions [39m

[38;2;110;97;148m1 / 3 sessions  |  20 calls[39m

  bash            15  [38;2;76;62;118m( 75.0%)[39m  [38;2;250;208;0m██████████████████████████████[39m
  read             5  [38;2;76;62;118m( 25.0%)[39m  [38;2;250;208;0m██████████[39m

[38;2;76;62;118m[Tab/←→] switch tab  [↑↓] cycle sessions  [q] close[39m"
`;

exports[`tool-usage component rendering > renders tool usage dashboard with per-tool stats 1`] = `
"[38;2;250;208;0m[1mTool Usage[22m[39m
Sessions: 5  |  Tool Calls: 66

[38;2;250;208;0m[Current Session][39m  [38;2;76;62;118m All Sessions [39m

[38;2;76;62;118m  No session data[39m

[38;2;76;62;118m[Tab/←→] switch tab  [↑↓] cycle sessions  [q] close[39m"
`;
